tests/topconst_const_typed_mismatch_unused_bad.sl
// Verifies topconst const typed mismatch unused is rejected.
const N i32 = true

fn main() {}
